// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decodes offset key with delimiter at the beginning 1`] = `
Object {
  "blockKey": "-key",
  "decoratorKey": 0,
  "leafKey": 1,
}
`;

exports[`decodes offset key with delimiter at the end 1`] = `
Object {
  "blockKey": "key-",
  "decoratorKey": 0,
  "leafKey": 1,
}
`;

exports[`decodes offset key with delimiter in between 1`] = `
Object {
  "blockKey": "key-with-delimiter",
  "decoratorKey": 0,
  "leafKey": 1,
}
`;

exports[`decodes offset key with no delimiter 1`] = `
Object {
  "blockKey": "key",
  "decoratorKey": 0,
  "leafKey": 1,
}
`;
